-----------------------------------------

Fix to allow for assessment profiles which have the same name but
apply to different courses (can't have two profiles with same name for
same course, of course!)

The use of cohorts for report_reports is confusing because it doesn't
then include the wrapper and the reports are not thought of as course
specific anyway. Its been eliminated.


Version ClaSS-0.8.63 release (2009/01/22)
-----------------------------------------

Fix for rare erroneous display of a register as complete when current
event is not set.

Fix to the cilumn filter in the MarkBook, the new multiple profiles
had introduced a problem when anything other than 'All' was selected.

Fix to the display of mrs for in the title field caused by an error in
the lang file.

Labelling of the column filter changed to empahsise R for Reports, as
T for tracking is moving to the P for profile assessments.


Version ClaSS-0.8.62 release (2009/01/08)
-----------------------------------------

Removed the categorydef for budget types which was just being too
prescriptive.

Amended the order of budgets on the main orders.php page to list
subbudgets following directly on from their overbudget.

Implemented the order search based on invoice reference number.

Fix to the default start date in the Report book scripts.

The main student lists in InfoBook, SEN and Medical can now have
unlimited numbers of columns. Extra display fields now include
non-privte medical details (ie. allergies and diet).


Version ClaSS-0.8.61 release (2008/12/20)
-----------------------------------------

Bugfix for alumni students. Leavers where getting community name='yid'
and not ='P:yid'. All should now be 'P:yid' with only current students
having name=yid.

Fixed a possible file vulnerability in the export script.

Removed the whole school lists from SEN and MedBook needs a filter
option before listing sids.

Added a general concern to the sentypes.


Version ClaSS-0.8.60 release (2008/12/15)